// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`sync lambda arn resource creates the correct lambda arn substitution 1`] = `
{
  "Fn::If": [
    "HasEnvironmentParameter",
    {
      "Fn::Sub": [
        "arn:aws:lambda:\${AWS::Region}:\${AWS::AccountId}:function:myLambda-\${env}",
        {
          "env": {
            "Ref": "env",
          },
        },
      ],
    },
    {
      "Fn::Sub": [
        "arn:aws:lambda:\${AWS::Region}:\${AWS::AccountId}:function:myLambda",
        {},
      ],
    },
  ],
}
`;

exports[`sync resolver config creates the correct lambda resolver config 1`] = `
{
  "ConflictDetection": "VERSION",
  "ConflictHandler": "LAMBDA",
  "LambdaConflictHandlerConfig": {
    "LambdaConflictHandlerArn": {
      "Fn::If": [
        "HasEnvironmentParameter",
        {
          "Fn::Sub": [
            "arn:aws:lambda:\${AWS::Region}:\${AWS::AccountId}:function:myLambda-\${env}",
            {
              "env": {
                "Ref": "env",
              },
            },
          ],
        },
        {
          "Fn::Sub": [
            "arn:aws:lambda:\${AWS::Region}:\${AWS::AccountId}:function:myLambda",
            {},
          ],
        },
      ],
    },
  },
}
`;
